--- a/portfolio/start/css/agency.css
+++ b/portfolio/start/css/agency.css
@@ -755,3 +755,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   max-width: 60%;
   height:auto;
 }
+
+.description{
+  text-align:start;
+}
