--- a/portfolio/start/css/agency.css
+++ b/portfolio/start/css/agency.css
@@ -31,8 +31,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 600;
+  font-family: 'Spartan', sans-serif;
 }
 
 section {
@@ -40,9 +40,9 @@ section {
 }
 
 section h2.section-heading {
-  font-size: 40px;
-  margin-top: 0;
-  margin-bottom: 15px;
+  font-size: 25px;
+  margin-top: 2%;
+  margin-bottom:1%;
 }
 
 section h3.section-subheading {
@@ -51,7 +51,7 @@ section h3.section-subheading {
   font-style: italic;
   margin-bottom: 75px;
   text-transform: none;
-  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+   font-family: 'Kumbh Sans', sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -69,14 +69,15 @@ section h3.section-subheading {
 
 
 .btn-primary {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #fffef3;
+  border-color: #fffef3;
+  color:#252525;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
-  color: white;
+  background-color: #a1a8a6;
+  border-color: #a1a8a6;
+  color: #252525;
 }
 
 .btn-primary:active, .btn-primary:focus {
@@ -122,12 +123,13 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand {
-  color: #fed136;
-  font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  color: #fffef3;
+  font-family: 'Spartan', sans-serif;
+  font-weight:600;
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #fec503;
+  color: #a1a8a6;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -135,12 +137,12 @@ img::-moz-selection {
   font-weight: 400;
   padding: 0.75em 0;
   letter-spacing: 1px;
-  color: white;
+  color: #fffef3;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #a1a8a6;
 }
 
 @media (min-width:320px){
@@ -148,6 +150,7 @@ img::-moz-selection {
   font-size: 12px;
   padding: 5px 15px;
 }
+
 }
 
 @media (min-width: 992px) {
@@ -181,8 +184,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-color:black;
-  /* background-image: url(); */
+  background-color:#252525;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -602,8 +604,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 section#contact {
-  background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-color: #252525;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -705,7 +706,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 .animation{
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
+  border-right: .15em solid #9d6937; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .05em; /* Adjust as needed */
@@ -721,14 +722,13 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: #9d6937; }
 }
 
 @media (max-width:768px) {
   .animation{
     font-size: 20px;
   }
-
 }
 
 @media (min-width:768px) {
@@ -738,12 +738,22 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 }
 }
 
-@media (max-width:1920px) {
-  .img-fluid-custom{
-  max-width: 100%;
-  height:auto;
+@media (max-width:1000px) {
 
+  .main-picture {
+    width: 45%;
   }
+}
+
+@media (min-width:1001px){
+  .main-picture {
+  max-width:25%;
+}
+section h2.section-heading {
+  font-size: 40px;
+}
+}
+
 
 /**** additional CSS***/
 
@@ -769,39 +779,84 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   justify-content: center;
 }
 
-/*figma*/
-.gg-figma {
-   box-sizing: border-box;
-   position: relative;
-   display: block;
-   width: 14px;
-   height: 20px;
-   transform: scale(var(--ggs,1));
-   background:
-   linear-gradient(
-      to left,
-      currentColor 3px,
-      transparent 0
-   ) no-repeat 3px 7px/3px 6px,
-   linear-gradient(
-      to left,
-      currentColor 3px,
-      transparent 0
-   ) no-repeat 3px 14px/3px 3px
+
+.top-title {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  text-align:center;
 }
-.gg-figma::after,
-.gg-figma::before {
-   content: "";
-   display: block;
-   box-sizing: border-box;
-   position: absolute;
-   width: 13px;
-   height: 6px;
-   background: currentColor;
-   border-radius: 22px
+
+.social-icon{
+  margin-top:3%;
+  text-align:center;
 }
-.gg-figma::after {
-   width: 6px;
-   top: 7px;
-   box-shadow: 7px 0 0,0 7px 0
+
+.carousel-custom {
+  width:25%;
+   transition: 0.6s ease;
 }
+
+.carousel-width{
+  width:100%;
+}
+
+.carousel-info-size {
+  margin-top: 5%
+}
+
+
+.color {
+  color:white;
+}
+
+.alt {
+  color:white;
+  font-size:1em;
+}
+
+section h3.contact-subheading {
+  margin-bottom: 10px;
+}
+
+.spacing {
+  margin-bottom:2%;
+}
+
+.customized {
+  text-align:center;
+  margin-top:3%;
+}
+
+#about {
+  background-color:#fffef3;
+}
+
+.bg-overRide{
+  background-color:#ebeadf;
+}
+
+#skills{
+  background-color:#a1a8a6;
+}
+
+#photo {
+  background-color: #fffef3;
+}
+
+.accent {
+  color:#9d6937;
+}
+
+.accentCream{
+  color:#fffef3;
+}
+
+.img-fluid-custom{
+  max-width: 100%;
+  height:auto;
+  }
+
+  p.text-muted {
+    font-family: 'Kumbh Sans', sans-serif;
+  }
