--- a/portfolio/start/css/agency.css
+++ b/portfolio/start/css/agency.css
@@ -301,10 +301,8 @@ header.masthead .intro-text .intro-heading {
 
 #portfolio .portfolio-item .portfolio-caption p {
   font-size: 16px;
-  font-style: italic;
   margin: 0;
-  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
+  font-family: 'Kumbh Sans', sans-serif;}
 
 #portfolio * {
   z-index: 2;
@@ -764,6 +762,7 @@ section h2.section-heading {
 
 .description{
   text-align:start;
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
 .custom-icon {
@@ -857,6 +856,10 @@ section h3.contact-subheading {
   height:auto;
   }
 
-  p.text-muted {
+  p.text-muted, .projectInfo {
     font-family: 'Kumbh Sans', sans-serif;
+  }
+
+  .hobby-margin {
+    margin-top:2%;
   }
