--- a/portfolio/start/css/agency.css
+++ b/portfolio/start/css/agency.css
@@ -14,15 +14,15 @@ p {
 }
 
 a {
-  color: #fed136;
+  color: #9d6937;
 }
-
+#9d6937
 a:hover {
-  color: #fec503;
+  color: #9d6937;
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #9d6937;
 }
 
 h1,
@@ -91,7 +91,7 @@ section h3.section-subheading {
 }
 
 ::selection {
-  background: #fed136;
+  background: #9d6937;
   text-shadow: none;
 }
 
@@ -259,7 +259,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(161, 168, 166, .9);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -329,7 +329,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .portfolio-modal .modal-content h2 {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-bottom: 15px;
 }
 
@@ -629,7 +629,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #9d6937;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -683,21 +683,21 @@ ul.social-buttons {
 }
 
 ul.social-buttons li a {
-  font-size: 20px;
-  line-height: 50px;
+  font-size: 15px;
+  line-height: 30px;
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   color: white;
   border-radius: 100%;
   outline: none;
-  background-color: #212529;
+  background-color: #252525;
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #fed136;
+  background-color: #9d6937;
 }
 
 /**** animation *****/
@@ -741,6 +741,9 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   .main-picture {
     width: 45%;
   }
+  #portfolio .portfolio-item .portfolio-caption p {
+    font-size:12px;
+  }
 }
 
 @media (min-width:1001px){
@@ -751,6 +754,32 @@ section h2.section-heading {
   font-size: 40px;
 }
 }
+
+/***** @media ******/
+  @media (max-width:400px) {
+ .portfolio-modal .modal-content h2 {
+   font-size:1.3rem;
+ }
+
+  h4 {
+    font-size:.88rem;
+  }
+  p{
+    font-size:.80rem;
+  }
+  .projectInfo {
+    font-size:.80rem;
+  }
+
+}
+
+@media (max-width:1024px) {
+  h4 {
+    font-size:.9rem;
+  }
+}
+
+
 
 
 /**** additional CSS***/
@@ -831,6 +860,10 @@ section h3.contact-subheading {
   background-color:#fffef3;
 }
 
+#contact {
+  padding: 50px 0;
+}
+
 .bg-overRide{
   background-color:#ebeadf;
 }
@@ -856,10 +889,19 @@ section h3.contact-subheading {
   height:auto;
   }
 
-  p.text-muted, .projectInfo {
+  p.text-muted, .projectInfo, .contact-style, .contact-style-heading {
     font-family: 'Kumbh Sans', sans-serif;
   }
 
   .hobby-margin {
     margin-top:2%;
+  }
+
+  .contact-info-name{
+    font-size:1.25rem;
+  }
+
+  .contact-style-heading {
+    color:#9d6937;
+    font-size:1.0rem;
   }
