--- a/css/agency.css
+++ b/css/agency.css
@@ -92,7 +92,7 @@ section h3.section-subheading {
 }
 
 ::selection {
-  background: #9d6937;
+  background: #ebeadf;
   text-shadow: none;
 }
 
@@ -143,6 +143,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
+  transition: 0.3s ease;
   color: #a1a8a6;
 }
 
